# void-forms

./: .gitignore  Cargo.toml  README.md  benchmark.yml  docker-compose.yml
docker/db/: Dockerfile
scripts/: init_db.sh
sql/: init.sql
src/: db.rs  form.rs  main.rs  router.rs
src/logic/: form.rs  mod.rs  user.rs
src/mw/: auth.rs
src/routes/: auth.rs  form.rs  mod.rs  user.rs
