[package]
name = "void-forms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.206", features = ["derive", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.11", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
serde_json = "1.0"
uuid = {version = "1.10.0", features = ["serde"] }
bb8 = "0.8.5"
bcrypt = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
